[package]
name = "ferro-git-drill"
version = "0.1.0"
authors = ["sarange"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
git2 = "0.20.4"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "blocking", "socks"] }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
